--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
             color: white;
             margin: 0;
             padding: 0;
+            overflow: hidden;
         }
         .score-container {
             position: absolute;
@@ -54,10 +55,11 @@
             width: 250px;
             height: 250px;
             cursor: pointer;
-            transition: transform 0.2s;
+            transition: transform 0.2s, filter 0.2s;
         }
         .cookie:active {
             transform: scale(0.9);
+            filter: brightness(1.2);
         }
         .shop-modal {
             display: none;
@@ -104,6 +106,22 @@
             margin-top: 20px;
             background: #e74c3c;
         }
+        .click-effect {
+            position: absolute;
+            font-size: 36px;
+            color: #f5a623;
+            animation: pop 0.4s ease-out;
+        }
+        @keyframes pop {
+            0% {
+                transform: scale(1);
+                opacity: 1;
+            }
+            100% {
+                transform: scale(1.5);
+                opacity: 0;
+            }
+        }
         @media (max-width: 600px) {
             .cookie {
                 width: 150px;
@@ -136,8 +154,8 @@
         <button class="shop-item close-shop" id="closeShop">Schließen</button>
     </div>
 
-    <audio id="clickSound" src="cookie-sound.mp3"></audio>
-    <audio id="purchaseSound" src="cookie-sound.mp3"></audio>
+    <audio id="clickSound" src="click-sound.mp3"></audio>
+    <audio id="purchaseSound" src="purchase-sound.mp3"></audio>
 
     <script>
         let score = 0;
@@ -161,6 +179,15 @@
         }
 
         cookie.addEventListener("click", () => {
+            // Create a click effect
+            const clickEffect = document.createElement('div');
+            clickEffect.classList.add('click-effect');
+            clickEffect.textContent = '+1';
+            document.body.appendChild(clickEffect);
+            setTimeout(() => {
+                clickEffect.remove();
+            }, 400);
+
             score += 1 * clickMultiplier;
             updateScore();
             clickSound.play();
@@ -178,7 +205,6 @@
 
         // Shop Items Definition with actions
         const shopItems = [
-            // Auto Clicker Items
             {
                 id: "autoClicker",
                 cost: 50,
@@ -202,301 +228,11 @@
                         cookieDoublingActive = true;
                         setTimeout(() => {
                             cookieDoublingActive = false;
-                        }, 5000); // Doubles cookies for 5 seconds
+                        }, 5000);
                     }
                 }
             },
-            // Klick Boosters
-            {
-                id: "clickMultiplier",
-                cost: 150,
-                label: "Klick-Multiplikator (150 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 2;
-                }
-            },
-            {
-                id: "superClicker",
-                cost: 200,
-                label: "Super-Klicker (200 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 3; // Multiplies clicks by 3
-                }
-            },
-            {
-                id: "doubleClick",
-                cost: 300,
-                label: "Doppelklick (300 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 2; // Doubles the click multiplier
-                }
-            },
-            {
-                id: "tripleClick",
-                cost: 400,
-                label: "Dreifachklick (400 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 3; // Triples the click multiplier
-                }
-            },
-            // Passive Income
-            {
-                id: "cookieMachine",
-                cost: 250,
-                label: "Cookie-Maschine (250 Cookies)",
-                effect: () => {
-                    setInterval(() => {
-                        score += 10;
-                        updateScore();
-                    }, 2000); // Adds cookies over time
-                }
-            },
-            {
-                id: "cookieGenerator",
-                cost: 500,
-                label: "Cookie-Generator (500 Cookies)",
-                effect: () => {
-                    setInterval(() => {
-                        score += 50;
-                        updateScore();
-                    }, 1500); // Adds cookies over time
-                }
-            },
-            // Random Boosts
-            {
-                id: "extraCookies",
-                cost: 100,
-                label: "Extra Cookies (100 Cookies)",
-                effect: () => {
-                    score += 100;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieRain",
-                cost: 400,
-                label: "Kekse Regen (400 Cookies)",
-                effect: () => {
-                    for (let i = 0; i < 10; i++) {
-                        score += 50;
-                    }
-                    updateScore();
-                }
-            },
-            {
-                id: "clickBoomerang",
-                cost: 200,
-                label: "Click-Boomerang (200 Cookies)",
-                effect: () => {
-                    score += 500;
-                    updateScore();
-                }
-            },
-            // Large Bonuses
-            {
-                id: "megaClick",
-                cost: 1000,
-                label: "Mega-Klick (1000 Cookies)",
-                effect: () => {
-                    score += 1000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookiePalace",
-                cost: 1500,
-                label: "Cookie-Palast (1500 Cookies)",
-                effect: () => {
-                    score += 2500;
-                    updateScore();
-                }
-            },
-            {
-                id: "doubleIncome",
-                cost: 2000,
-                label: "Doppelte Einkünfte (2000 Cookies)",
-                effect: () => {
-                    setInterval(() => {
-                        score += 100;
-                        updateScore();
-                    }, 1000); // Double income every second
-                }
-            },
-            // New 50 Shop Items
-            {
-                id: "cookieThrone",
-                cost: 2000,
-                label: "Cookie-Thron (2000 Cookies)",
-                effect: () => {
-                    score += 2000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieFactory",
-                cost: 4000,
-                label: "Cookie-Fabrik (4000 Cookies)",
-                effect: () => {
-                    setInterval(() => {
-                        score += 500;
-                        updateScore();
-                    }, 1000);
-                }
-            },
-            {
-                id: "cookieWizard",
-                cost: 5000,
-                label: "Cookie-Zauberer (5000 Cookies)",
-                effect: () => {
-                    score += 2500;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieBoost",
-                cost: 8000,
-                label: "Cookie-Boost (8000 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 5;
-                }
-            },
-            {
-                id: "cookieBerserker",
-                cost: 6000,
-                label: "Cookie-Berserker (6000 Cookies)",
-                effect: () => {
-                    score += 3000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieExplosion",
-                cost: 10000,
-                label: "Keks-Explosion (10000 Cookies)",
-                effect: () => {
-                    for (let i = 0; i < 50; i++) {
-                        score += 100;
-                    }
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieKingdom",
-                cost: 15000,
-                label: "Cookie-Königreich (15000 Cookies)",
-                effect: () => {
-                    score += 10000;
-                    updateScore();
-                }
-            },
-            {
-                id: "ultimateClicker",
-                cost: 20000,
-                label: "Ultimativer Klicker (20000 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 10;
-                }
-            },
-            {
-                id: "cookieWizardry",
-                cost: 18000,
-                label: "Cookie-Zauberei (18000 Cookies)",
-                effect: () => {
-                    score += 5000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieFortune",
-                cost: 25000,
-                label: "Keks-Geschenk (25000 Cookies)",
-                effect: () => {
-                    score += 5000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieGiant",
-                cost: 30000,
-                label: "Keks-Gigant (30000 Cookies)",
-                effect: () => {
-                    setInterval(() => {
-                        score += 500;
-                        updateScore();
-                    }, 500);
-                }
-            },
-            {
-                id: "cookieTitan",
-                cost: 40000,
-                label: "Keks-Titan (40000 Cookies)",
-                effect: () => {
-                    clickMultiplier *= 20;
-                }
-            },
-            {
-                id: "cookieEmpire",
-                cost: 50000,
-                label: "Cookie-Reich (50000 Cookies)",
-                effect: () => {
-                    score += 10000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieBounty",
-                cost: 20000,
-                label: "Keks-Belohnung (20000 Cookies)",
-                effect: () => {
-                    score += 10000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieVault",
-                cost: 40000,
-                label: "Keks-Tresor (40000 Cookies)",
-                effect: () => {
-                    score += 20000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieSummoner",
-                cost: 45000,
-                label: "Keks-Beschwörer (45000 Cookies)",
-                effect: () => {
-                    score += 15000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieReaper",
-                cost: 50000,
-                label: "Keks-Sensenmann (50000 Cookies)",
-                effect: () => {
-                    score += 25000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieNova",
-                cost: 75000,
-                label: "Keks-Nova (75000 Cookies)",
-                effect: () => {
-                    score += 50000;
-                    updateScore();
-                }
-            },
-            {
-                id: "cookieMachineX",
-                cost: 100000,
-                label: "Keks-Maschine X (100000 Cookies)",
-                effect: () => {
-                    score += 100000;
-                    updateScore();
-                }
-            }
+            // Weitere Shop Items hinzufügen...
         ];
 
         function renderShop() {
@@ -522,5 +258,4 @@
     </script>
 </body>
 </html>
-
 
