--- a/index.html
+++ b/index.html
@@ -154,8 +154,8 @@
         <button class="shop-item close-shop" id="closeShop">Schließen</button>
     </div>
 
-    <audio id="clickSound" src="click-sound.mp3"></audio>
-    <audio id="purchaseSound" src="purchase-sound.mp3"></audio>
+    <audio id="clickSound" src="button-124476.mp3"></audio>
+    <audio id="purchaseSound" src="button-124476.mp3"></audio>
 
     <script>
         let score = 0;
