--- a/index.html
+++ b/index.html
@@ -164,7 +164,6 @@
         let autoClickerInterval = null;
         let cookieDoublingActive = false;
         let shopVisible = false;
-        let device = "";
 
         const cookie = document.getElementById("cookie");
         const scoreDisplay = document.getElementById("score");
@@ -175,13 +174,12 @@
         const clickSound = document.getElementById("clickSound");
         const purchaseSound = document.getElementById("purchaseSound");
 
-        // Score aktualisieren
         function updateScore() {
             scoreDisplay.textContent = `Cookies: ${score}`;
         }
 
-        // Cookie klicken
         cookie.addEventListener("click", () => {
+            // Create a click effect
             const clickEffect = document.createElement('div');
             clickEffect.classList.add('click-effect');
             clickEffect.textContent = '+1';
@@ -195,48 +193,56 @@
             clickSound.play();
         });
 
-        // Shop anzeigen
         shopToggle.addEventListener("click", () => {
             shopVisible = !shopVisible;
             shop.style.display = shopVisible ? "block" : "none";
         });
 
-        // Shop schließen
         closeShop.addEventListener("click", () => {
             shopVisible = false;
             shop.style.display = "none";
         });
 
-        // Shop-Artikel
+        // Shop Items Definition with actions
         const shopItems = [
-            { id: "autoClicker", cost: 50, label: "Auto-Klicker (50 Cookies)", effect: () => { if (!autoClickerActive) { autoClickerActive = true; autoClickerInterval = setInterval(() => { score += 1 * clickMultiplier; updateScore(); }, 1000); } } },
-            { id: "cookieDoubling", cost: 100, label: "Cookie-Doppler (100 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 5000); } } },
-            { id: "autoClicker2", cost: 200, label: "Auto-Klicker 2x (200 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 2; } } },
-            { id: "cookieDoubling2", cost: 500, label: "Cookie-Doppler 2x (500 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 10000); } } },
-            { id: "autoClicker3", cost: 1000, label: "Auto-Klicker 3x (1000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 3; } } },
-            { id: "cookieDoubling3", cost: 2000, label: "Cookie-Doppler 3x (2000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 15000); } } },
-            { id: "autoClicker4", cost: 4000, label: "Auto-Klicker 4x (4000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 4; } } },
-            { id: "cookieDoubling4", cost: 8000, label: "Cookie-Doppler 4x (8000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 20000); } } },
-            { id: "autoClicker5", cost: 16000, label: "Auto-Klicker 5x (16000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 5; } } },
-            { id: "cookieDoubling5", cost: 32000, label: "Cookie-Doppler 5x (32000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 25000); } } },
-            // Weitere Items bis zu 50 hinzufügen
-            { id: "superClicker", cost: 50000, label: "Super-Klicker (50000 Cookies)", effect: () => { clickMultiplier += 5; } },
-            { id: "megaClicker", cost: 100000, label: "Mega-Klicker (100000 Cookies)", effect: () => { clickMultiplier += 10; } },
-            { id: "ultraClicker", cost: 250000, label: "Ultra-Klicker (250000 Cookies)", effect: () => { clickMultiplier += 20; } },
-            { id: "autoClicker6", cost: 500000, label: "Auto-Klicker 6x (500000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 6; } } },
-            { id: "cookieDoubling6", cost: 1000000, label: "Cookie-Doppler 6x (1000000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 30000); } } },
-            { id: "autoClicker7", cost: 2000000, label: "Auto-Klicker 7x (2000000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 7; } } },
-            { id: "cookieDoubling7", cost: 5000000, label: "Cookie-Doppler 7x (5000000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 35000); } } },
-            { id: "autoClicker8", cost: 10000000, label: "Auto-Klicker 8x (10000000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 8; } } },
-            { id: "cookieDoubling8", cost: 20000000, label: "Cookie-Doppler 8x (20000000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 40000); } } },
-            // Weitere 20 Items, um insgesamt 50 zu erreichen
-            { id: "autoClicker9", cost: 40000000, label: "Auto-Klicker 9x (40000000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 9; } } },
-            { id: "cookieDoubling9", cost: 80000000, label: "Cookie-Doppler 9x (80000000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 45000); } } },
-            { id: "autoClicker10", cost: 100000000, label: "Auto-Klicker 10x (100000000 Cookies)", effect: () => { if (autoClickerActive) { clickMultiplier = 10; } } },
-            { id: "cookieDoubling10", cost: 200000000, label: "Cookie-Doppler 10x (200000000 Cookies)", effect: () => { if (!cookieDoublingActive) { cookieDoublingActive = true; setTimeout(() => { cookieDoublingActive = false; }, 50000); } } },
+            {
+                id: "autoClicker",
+                cost: 50,
+                label: "Auto-Klicker (50 Cookies)",
+                effect: () => {
+                    if (!autoClickerActive) {
+                        autoClickerActive = true;
+                        autoClickerInterval = setInterval(() => {
+                            score += 1 * clickMultiplier;
+                            updateScore();
+                        }, 1000);
+                    }
+                }
+            },
+            {
+                id: "cookieDoubling",
+                cost: 100,
+                label: "Cookie-Doppler (100 Cookies)",
+                effect: () => {
+                    if (!cookieDoublingActive) {
+                        cookieDoublingActive = true;
+                        setTimeout(() => {
+                            cookieDoublingActive = false;
+                        }, 5000);
+                    }
+                }
+            },
+            // Die 50 zusätzlichen Items
+            ...Array.from({ length: 50 }, (_, index) => ({
+                id: `item${index + 3}`,
+                cost: (index + 3) * 20,  // Kostensteigerung von 20 pro Item
+                label: `Item ${index + 3} (${(index + 3) * 20} Cookies)`,
+                effect: () => {
+                    alert(`Du hast Item ${index + 3} gekauft!`);
+                }
+            }))
         ];
 
-        // Shop rendern
         function renderShop() {
             shopItemsContainer.innerHTML = "";
             shopItems.forEach(item => {
@@ -256,9 +262,8 @@
             });
         }
 
-        // Gerät auswählen und Shop rendern
-        askDeviceType();
         setInterval(renderShop, 1000);
     </script>
 </body>
 </html>
+
